[package]
name = "twitchfargmentdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "1.0"
futures = "0.3"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"